deploy/demo.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: frontend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: frontend-VERSION
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
        version: v2
    spec:
      nodeSelector:
        internet: "true"
      containers:
        - name: frontend
          image: registry.njuics.cn/wdongyu/frontend:VERSION
          imagePullPolicy: Always
          command: ["nginx", "-g", "daemon off;"]
          ports:
            - containerPort: 80
---
