deploy/VirtualService.yaml
apiVersion: networking.istio.io/v2alpha3
kind: Gateway
metadata:
  name: typhoon-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v2alpha3
kind: VirtualService
metadata:
  name: frontend-gateway
spec:
  hosts:
  - "*"
  gateways:
  - typhoon-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend
        subset: v2
        port:
          number: 80
